# holyfields

./: .gitignore  DEV_README.md  GOD.md  README.md  TASK.md  mise.toml  package.json  pyproject.toml  tsconfig.json
.agent/skills/: 33god-service-development
bmad/: config.yaml
common/schemas/: base_event.json  base_voice_event.json  types.json
docs/: SCHEMA-RELEASE-v1.0.0-transcription-events.md  bmm-workflow-status.yaml  product-brief-bloodbank-contracts-2026-01-14.md  product-brief-holyfields-2026-01-14.md  sprint-plan-bloodbank-contracts-2026-01-14.md  sprint-plan-holyfields-2026-01-14.md  sprint-status.yaml  tech-spec-bloodbank-contracts-2026-01-14.md  tech-spec-holyfields-2026-01-14.md
docs/integration-tickets/: EPIC-001-STORY-001-002-COMPLETE.md  THEBOARD-001-adopt-holyfields-contracts.md  THEBOARD-002-add-turn-events.md  THEBOARD-003-migration-guide.md
docs/stories/: STORY-003-completion.md  STORY-004-completion.md  STORY-005-completion.md
schemas/_common/: base_event.v1.json  theboard_extension.v1.json  types.v1.json
schemas/agent/: error.v1.json  heartbeat.v1.json  message.received.v1.json  message.sent.v1.json  session.ended.v1.json  session.started.v1.json  state.changed.v1.json  state_changed.json  subagent.completed.v1.json  subagent.spawned.v1.json  task.assigned.v1.json  task.completed.v1.json  tool.completed.v1.json  tool.invoked.v1.json
schemas/artifact/: ingestion.failed.v1.json  lifecycle.v1.json
scripts/: generate_python.sh  generate_transcription_binding.py  generate_typescript.sh  validate_transcription_schema.py
(+52 files in other folders)
